# abidat_robot_control

./: .gitignore  CMakeLists.txt  README.md  package.xml
.devcontainer/: Dockerfile  devcontainer.json
docs/: teleop_node.md
include/abidat_robot_control/base/: activation_function.h  forward_kinematic.h  forward_kinematic_calculation.h  input_mapping.h
launch/: automous.launch  driver_cam.launch  navigation.launch  omniwheel_drive.launch  remote_control.launch  servo.launch  ydlidar.launch
msg/: DeviceInfo.msg  MotorControl.msg  MotorState.msg  ServoInfo.msg
param/: driver_cam.yaml  forward_kinematics.yaml  kinematic_config.yaml  motor.yaml  servo.yaml  tele_op.yaml  ydlidar.yaml
script/: servocontrol.py
src/nodes/: forward_kinematic_node.cpp  forward_kinematic_node.h  motor_handler_node.cpp  motor_handler_node.h  teleoperation_node.cpp  teleoperation_node.h
test/launch/: basic_function_test.launch  rostest_forward_kinematic_node.test  rostest_teleop_node.test
test/param/: teleop_test.yaml
test/src/: ros_node_forward_kinematics_test.cpp  rostest_forward_kinematic_node.cpp  rostest_teleop_node.cpp  test_forward_kinematics.cpp  test_get_keyboard_input.cpp  test_input_mapper.cpp
udev/: 99-uvc.rules  servomotor.rules  udev.sh
