<?xml version="1.0"?>
<package format="2">
  <name>officerobot</name>
  <version>0.3.0</version>
  <description>
    Abidat Office Robot
  </description>
  <maintainer email="c.merkl@abidat.de">Christian Merkl</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>message_runtime</depend>
  <depend>ros_msgs</depend>

</package>
