<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>abidat_robot_control</name>
  <version>0.4.0</version>
  <maintainer email="c.wendt@abidat.de">Christian Wendt</maintainer>
  <description>
    Abidat Office Robot
  </description>

  <license>GPLv2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf</depend>

</package>
